<resources>
    <string name="app_name">BitChronicles</string>
    <string name="action_go">Go</string>
    <string name="baking_title">Baking with Gemini</string>
    <string name="label_prompt">Prompt</string>
    <string name="prompt_placeholder">Provide a recipe for the baked goods in the image</string>
    <string name="image1_description">Cupcake</string>
    <string name="image2_description">Cookies</string>
    <string name="image3_description">Cake</string>
    <string name="results_placeholder">(Results will appear here)</string>
    <string name="hint_username">User</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Ingress</string>
    <string name="crear_campa_a">CREAR CAMPAÑA</string>
    <string name="crear_personaje">Crear Personaje</string>
    <string name="nombre_del_personaje">Nombre del Personaje</string>
    <string-array name="setting_types">
        <item>Medieval</item>
        <item>Moderna</item>
        <item>Ciberpunk</item>
    </string-array>

    <string-array name="tone_types">
        <item>Épico</item>
        <item>Oscuro</item>
        <item>Humorístico</item>
        <item>Trágico</item>
        <item>Bélico</item>
    </string-array>

    <string-array name="power_systems">
        <item>Magia arcana</item>
        <item>Magia divina</item>
        <item>Tecnología</item>
        <item>Psiónica</item>
        <item>Sin poderes</item>
    </string-array>

    <string-array name="conflict_types">
        <item>Política</item>
        <item>Guerra</item>
        <item>Religioso</item>
        <item>Exploración</item>
        <item>Invasión</item>
    </string-array>

    <string name="nombre_del_mundo">Nombre del mundo</string>
    <string name="ambientacion">Ambientación</string>
    <string name="tono_narrativo">Tono narrativo</string>
    <string name="sistema_de_poder">Sistema de poder</string>
    <string name="razas_dominantes">Razas o facciones dominantes</string>
    <string name="conflicto_principal">Conflicto principal</string>
    <string name="lugares_clave">Lugares clave</string>
    <string name="personajes_importantes">Personajes importantes</string>
    <string name="ganchos_narrativos">Ganchos narrativos</string>
    <string name="objetivo_jugadores">Objetivo de los jugadores</string>
    <string name="historia_del_mundo">Historia del mundo</string>
    <string name="crear_campaña">Crear Campaña</string>
    <string name="result_placeholder">Resultado...</string>

    <string name="import_image">Importar imagen</string>
    <string name="character_name_hint">Nombre del personaje</string>
    <string name="race_label">Raza</string>
    <string name="class_label">Clase o Rol</string>
    <string name="background_label">Trasfondo</string>
    <string name="alignment_label">Alineación</string>
    <string name="personality_traits_hint">Rasgos de personalidad</string>
    <string name="abilities_hint">Habilidades (máximo 3)</string>
    <string name="motivation_hint">Motivación del personaje</string>
    <string name="create_character_button">Crear Personaje</string>
    <string name="default_character_response">Aquí aparecerá la ficha del personaje...</string>

    <!-- Alineaciones -->
    <string name="alignment_legal">Legal</string>
    <string name="alignment_neutral">Neutral</string>
    <string name="alignment_chaotic">Caótico</string>
    <string name="moral_good">Bueno</string>
    <string name="moral_neutral">Neutral</string>
    <string name="moral_evil">Malvado</string>

    <string-array name="turnos">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>


    <string-array name="races">
        <item>Humano</item>
        <item>Elfo</item>
        <item>Enano</item>
        <item>Orco</item>
    </string-array>

    <string-array name="classes">
        <item>Guerrero</item>
        <item>Mago</item>
        <item>Pícaro</item>
        <item>Clérigo</item>
        <item>Druida</item>
        <item>Bardo</item>
    </string-array>

    <string-array name="backgrounds">
        <item>Héroe Caído</item>
        <item>Erudito</item>
        <item>Forajido</item>
        <item>Mercenario</item>
        <item>Noble</item>
        <item>Superviviente</item>
    </string-array>

</resources>